[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
rayon = "1.0"
reqwest = { verson = "0.11.9", features = ["json"] }
rocket = "0.5.0-rc.1"
serde = "1.0.136"
serde_json = "1.0.59"
trust-dns-resolver = "0.20"